[tool.poetry]
name = "codeqai"
version = "0.0.10"
description = ""
authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
readme = "README.md"
packages = [{ include = "codeqai" }]

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.4.0"
yaspin = "^3.0.0"
inquirer = "^3.1.3"
gitpython = "^3.1.36"
langchain = ">=0.0.310,<0.0.330"
openai = "^0.28.0"
pyyaml = "^6.0.1"
tree-sitter = "^0.20.2"
tree-sitter-languages = "^1.7.0"
rich = "^13.5.3"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
codeqai = "codeqai.__main__:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
