[tool.poetry]
name = "codeqai"
version = "0.0.18"
description = ""
authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
readme = "README.md"
packages = [{ include = "codeqai" }]
include = ["./streamlit/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
tiktoken = "^0.5.2"
yaspin = "^3.0.0"
inquirer = "^3.1.3"
gitpython = "^3.1.36"
langchain = "^0.1.5"
openai = "^1.11.1"
pyyaml = "^6.0.1"
tree-sitter = "^0.20.2"
tree-sitter-languages = "^1.7.0"
rich = "^13.5.3"
python-dotenv = "^1.0.0"
streamlit = "^1.31.0"
langchain-community = "^0.0.32"
langchain-openai = "^0.0.5"
click = "^8.1.7"
langchain-core = "^0.1.42"
langchain-anthropic = "^0.1.8"

[tool.poetry.scripts]
codeqai = "codeqai.__main__:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
